<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".thaiOption"
    android:background="#FFFFFF">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="#EC3F68"
            android:orientation="horizontal"
            android:layout_gravity="center|center_vertical"
            android:gravity="center_vertical">

            <ImageView
                android:layout_gravity="center"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_margin="2dp"
                android:background="@drawable/right_arrow"
                android:padding="20dp"
                android:onClick="backToThaiOption"/>

            <TextView
                android:id="@+id/textThaiOpHeader"
                android:layout_width="147dp"
                android:layout_height="60dp"
                android:layout_gravity="center|center_horizontal"
                android:layout_marginLeft="80dp"
                android:fontFamily="@font/sut_font"
                android:text="@string/thaiCourseHeader"
                android:textColor="#FFFFFF"
                android:textSize="50dp" />
        </LinearLayout>

        <Button
            android:id="@+id/thaiSymbolCourse1"
            android:layout_marginTop="50dp"
            android:layout_gravity="center"
            android:layout_width="320dp"
            android:layout_height="100dp"
            android:background="@drawable/thai_course_menu"
            android:textColor="#FFFFFF"
            android:text="@string/course1"
            android:fontFamily="@font/sut_font"
            android:textSize="50dp"
            android:onClick="onClick"/>
        <Button
            android:id="@+id/thaiSymbolCourse2"
            android:layout_marginTop="15dp"
            android:layout_gravity="center"
            android:layout_width="320dp"
            android:layout_height="100dp"
            android:background="@drawable/thai_course_menu_pink"
            android:textColor="#FFFFFF"
            android:text="@string/course2"
            android:fontFamily="@font/sut_font"
            android:textSize="50dp"
            android:onClick="onClick"/>

        <Button
            android:id="@+id/thaiSymbolCourse3"
            android:layout_marginTop="15dp"
            android:layout_gravity="center"
            android:layout_width="320dp"
            android:layout_height="100dp"
            android:background="@drawable/thai_course_menu_blue"
            android:textColor="#FFFFFF"
            android:text="@string/course3"
            android:fontFamily="@font/sut_font"
            android:textSize="50dp"
            android:onClick="onClick"/>

        <Button
            android:id="@+id/thaiSymbolCourse4"
            android:layout_marginTop="15dp"
            android:layout_gravity="center"
            android:layout_width="320dp"
            android:layout_height="100dp"
            android:background="@drawable/thai_course_menu_green"
            android:textColor="#FFFFFF"
            android:text="@string/course4"
            android:fontFamily="@font/sut_font"
            android:textSize="50dp"
            android:onClick="onClick"/>

        <Button
            android:id="@+id/thaiSymbolCourse5"
            android:layout_marginTop="15dp"
            android:layout_gravity="center"
            android:layout_width="320dp"
            android:layout_height="100dp"
            android:background="@drawable/thai_course_menu"
            android:textColor="#FFFFFF"
            android:text="@string/course5"
            android:fontFamily="@font/sut_font"
            android:textSize="50dp"
            android:onClick="onClick"/>
        <Button
            android:id="@+id/thaiSymbolCourse6"
            android:layout_marginTop="15dp"
            android:layout_gravity="center"
            android:layout_width="320dp"
            android:layout_height="100dp"
            android:background="@drawable/thai_course_menu_pink"
            android:textColor="#FFFFFF"
            android:text="@string/course6"
            android:fontFamily="@font/sut_font"
            android:textSize="50dp"
            android:onClick="onClick"/>
        <Button
            android:id="@+id/thaiSymbolCourse7"
            android:layout_marginTop="15dp"
            android:layout_gravity="center"
            android:layout_width="320dp"
            android:layout_height="100dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/thai_course_menu_blue"
            android:textColor="#FFFFFF"
            android:text="@string/course7"
            android:fontFamily="@font/sut_font"
            android:textSize="50dp"
            android:onClick="onClick"/>

    </LinearLayout>
</ScrollView>