<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".thaiOption"
    android:background="#FFFFFF">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="#EC3F68"
            android:orientation="horizontal"
            android:layout_gravity="center|center_vertical">

            <ImageView
                android:layout_gravity="center"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_margin="2dp"
                android:background="@drawable/right_arrow"
                android:padding="20dp"
                android:onClick="backToHomeThai"/>

            <TextView
                android:id="@+id/textThaiOpHeader"
                android:layout_width="147dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:layout_marginLeft="70dp"
                android:fontFamily="@font/sut_font"
                android:text="@string/thaiOptionHeader"
                android:textColor="#FFFFFF"
                android:textSize="50dp" />
        </LinearLayout>

        <Button
            android:id="@+id/thaiOption"
            android:layout_width="320dp"
            android:layout_height="130dp"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:background="@drawable/alphabet"
            android:fontFamily="@font/sut_font"
            android:onClick="sendToThaiCourse"
            android:paddingLeft="40dp"
            android:text="@string/alphabet"
            android:textSize="50dp" />

        <Button
            android:id="@+id/thaiVowel"
            android:layout_marginTop="5dp"
            android:layout_gravity="center"
            android:layout_width="320dp"
            android:layout_height="130dp"
            android:background="@drawable/vowel"
            android:text="@string/vowel"
            android:onClick="sendToThaiCourse"
            android:fontFamily="@font/sut_font"
            android:paddingLeft="40dp"
            android:textSize="50dp"/>
        <Button
            android:id="@+id/toneMarkID"
            android:layout_marginTop="15dp"
            android:layout_gravity="center"
            android:layout_width="320dp"
            android:layout_height="130dp"
            android:background="@drawable/tone_mark"
            android:text="@string/toneMark"
            android:onClick="sendToThaiCourse"
            android:fontFamily="@font/sut_font"
            android:paddingLeft="40dp"
            android:textSize="50dp"/>
        <Button
            android:id="@+id/thaiSymbol"
            android:layout_marginTop="15dp"
            android:layout_gravity="center"
            android:layout_width="320dp"
            android:layout_height="130dp"
            android:background="@drawable/thaisymbol"
            android:text="@string/thaisymbol"
            android:onClick="sendToThaiCourse"
            android:fontFamily="@font/sut_font"
            android:paddingLeft="40dp"
            android:textSize="50dp"/>

    </LinearLayout>
</ScrollView>