<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/bg">


        <ImageView
            android:id="@+id/logo"
            android:layout_marginTop="15dp"
            android:layout_width="wrap_content"
            android:layout_height="250dp"
            android:src="@drawable/logo" />
    <TextView
        android:id="@+id/logoTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/logo"
        android:text="morse - ma"
        android:textSize="80sp"
        android:textColor="#FFFFFF"
        android:gravity="center"
        android:textStyle="bold"
        android:fontFamily="@font/sut_font"/>

    <TextView
        android:id="@+id/descript1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/logoTitle"
        android:layout_marginTop="86dp"
        android:fontFamily="@font/sut_font"
        android:gravity="center"
        android:text="@string/descriptApp1"
        android:textColor="#000000"
        android:textSize="30sp" />
    <TextView
        android:id="@+id/descript2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/descript1"
        android:fontFamily="@font/sut_font"
        android:gravity="center"
        android:text="@string/descriptApp2"
        android:textColor="#000000"
        android:textSize="30sp" />

    <RelativeLayout
        android:layout_below="@+id/descript2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <Button
            android:id="@+id/start"
            android:layout_width="264dp"
            android:layout_height="wrap_content"
            android:layout_margin="50dp"
            android:background="@drawable/button_pink"
            android:fontFamily="@font/sut_font"
            android:gravity="center|center_vertical"
            android:text="@string/letStart"
            android:textColor="#FFFFFF"
            android:textSize="40dp"
            android:textStyle="bold"
            android:onClick="send"/>
    </RelativeLayout>

</RelativeLayout>