<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Home"
    android:background="@drawable/bg">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="186dp"
            android:src="@drawable/logo" />
        <TextView
            android:id="@+id/logoTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/logo"
            android:text="morse - ma"
            android:textSize="60sp"
            android:textColor="#FFFFFF"
            android:gravity="center"
            android:textStyle="bold"
            android:fontFamily="@font/sut_font"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="237dp"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/thaiOptionBtn"
                android:layout_width="160dp"
                android:layout_height="180dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/home_menu"
                android:drawableTop="@drawable/thaialpha"
                android:textSize="40dp"
                android:fontFamily="@font/sut_font"
                android:text="@string/thaiCour"
                android:onClick="onClick"/>
            <Button
                android:id="@+id/numberOption"
                android:layout_width="160dp"
                android:layout_height="180dp"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/home_menu"
                android:drawableTop="@drawable/number"
                android:textSize="40dp"
                android:fontFamily="@font/sut_font"
                android:onClick="onClick"
                android:text="@string/numberCour"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="222dp"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/translateOption"
                android:layout_width="160dp"
                android:layout_height="180dp"
                android:layout_marginTop="1dp"
                android:paddingTop="7dp"
                android:background="@drawable/home_menu"
                android:drawableTop="@drawable/translate"
                android:textSize="40dp"
                android:fontFamily="@font/sut_font"
                android:text="@string/translate"
                android:onClick="onClick"/>

            <Button
                android:id="@+id/historyOption"
                android:layout_width="160dp"
                android:layout_height="180dp"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="1dp"
                android:background="@drawable/home_menu"
                android:drawableTop="@drawable/morse"
                android:textSize="40dp"
                android:fontFamily="@font/sut_font"
                android:text="@string/morseCour"
                android:onClick="onClick"
                />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>